--- a/GoList/bin/AndroidManifest.xml
+++ b/GoList/bin/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="12"
         android:targetSdkVersion="21" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,13 +15,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Login"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>            
+        </activity>
+        <activity
+            android:name=".activities.MyListsActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.ListActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
