--- a/GoList/bin/AndroidManifest.xml
+++ b/GoList/bin/AndroidManifest.xml
@@ -31,6 +31,14 @@
             android:name=".activities.ListActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".activities.CreateNewListActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.InviteFriendsActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
