--- a/GoList/bin/AndroidManifest.xml
+++ b/GoList/bin/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -37,6 +37,14 @@
         </activity>
         <activity
             android:name=".activities.InviteFriendsActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.CreateNewArticleActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.RegisterActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
