--- a/GoList/AndroidManifest.xml
+++ b/GoList/AndroidManifest.xml
@@ -47,6 +47,22 @@
             android:name=".activities.RegisterActivity"
             android:label="@string/app_name" >
         </activity>
+         <activity
+            android:name=".activities.CreateNewItemActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.EditItemActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.EditListActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activities.ShowUsersActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
