--- a/GoList/AndroidManifest.xml
+++ b/GoList/AndroidManifest.xml
@@ -9,12 +9,17 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
+        android:name=".activities.GoListApplication"
         android:icon="@drawable/logo5"
         android:label="@string/app_name"
+        android:allowBackup="true"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />        
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
@@ -72,13 +77,13 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Panel" >
         </activity>
-         <activity
+        <activity
             android:name=".activities.ShowHistoryActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Panel" >
         </activity>
-         <activity
+        <activity
             android:name=".activities.ImportFavoriteItemsActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -86,6 +91,42 @@
         </activity>
         <activity
             android:name=".activities.ShowFavoriteItemsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Panel" >
+        </activity>
+        <activity
+            android:name=".activities.ChangePasswordActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Panel" >
+        </activity>
+        <activity
+            android:name=".activities.DeleteAccountActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Panel" >
+        </activity>
+        <activity
+            android:name=".activities.DeleteListActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Panel" >
+        </activity>
+        <activity
+            android:name=".activities.AnswerInvitationActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Panel" >
+        </activity>
+        <activity
+            android:name=".activities.ManageItemsActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Panel" >
+        </activity>
+        <activity
+            android:name=".activities.ChangeListNameActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Panel" >
