--- a/GoList/AndroidManifest.xml
+++ b/GoList/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-sdk
         android:minSdkVersion="12"
         android:targetSdkVersion="21" />
+    
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="da.se.golist" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,6 +22,7 @@
         android:label="@string/app_name"
         android:allowBackup="true"
         android:theme="@style/AppTheme" >
+         <uses-library android:name="android.test.runner" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />        
